--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,23 @@
         android:theme="@style/Theme.ChatFlow"
         tools:targetApi="31">
         <activity
+            android:name=".CompleteAccountActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OTPActivity"
+            android:exported="false" />
+        <activity
+            android:name=".SignUpEmailActivity"
+            android:exported="false" />
+        <activity
+            android:name=".LoginEmailActivity"
+            android:exported="false" />
+        <activity
             android:name=".AboutActivity"
             android:exported="false" />
         <activity
             android:name=".WallpaperActivity"
             android:exported="false" />
-
         <activity
             android:name=".ChatActivity"
             android:exported="false">
